--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -3,7 +3,8 @@
     <h2>Edit <%= resource_name.to_s.humanize %></h2>
 
     <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
-      <%= devise_error_messages! %>
+
+      <%= render "shared/devisemes" %>
 
       <div class="form-group">
         <%= f.text_field :fullname, autofocus: true, :class => "form-control", :placeholder => "Full Name" %>
