--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,45 +1,56 @@
 <div class="row">
-  <div class="col-md-6 col-md-offset-3 text-center">
-    <h2>Edit <%= resource_name.to_s.humanize %></h2>
+  <div class="col-md-3">
+    <ul class="sidebar-list">
+      <li class="sidebar-item">
+        <%= link_to "Edit Profile", edit_user_registration_path, class: "sidebar-link active" %>
+      </li>
+    </ul>
+    <br/>
+    <%= link_to "View My Profile", user_path(current_user.id), class: "btn btn-default wide" %>
+  </div>
+  <div class="col-md-9 text-center">
+    <div class="panel panel-default">
+      <div class="panel-heading">Your Profile</div>
+      <div class="panel-body">
+        <div class="container">
+          <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
 
-    <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
+            <%= render "shared/devisemes" %>
 
-      <%= render "shared/devisemes" %>
+            <div class="form-group">
+              <%= f.text_field :fullname, autofocus: true, :class => "form-control", :placeholder => "Full Name" %>
+            </div>
 
-      <div class="form-group">
-        <%= f.text_field :fullname, autofocus: true, :class => "form-control", :placeholder => "Full Name" %>
+            <div class="form-group">
+              <%= f.email_field :email, :class => "form-control", :placeholder => "Email" %>
+            </div>
+
+            <div class="form-group">
+              <%= f.text_field :phone_number, :class => "form-control", :placeholder => "Phone Number" %>
+            </div>
+
+            <div class="form-group">
+              <%= f.text_area :description, rols: 5, cols: 25, :class => "form-control", :placeholder => "Description" %>
+            </div>
+
+            <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
+              <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
+            <% end %>
+
+            <div class="form-group">
+              <%= f.password_field :password, autocomplete: "off", :class => "form-control", :placeholder => "New Password (leave blank if you don't want to change it)" %>
+            </div>
+
+            <div class="form-group">
+              <%= f.password_field :password_confirmation, autocomplete: "off", :class => "form-control", :placeholder => "Confirm Password" %>
+            </div>
+
+            <div class="actions">
+              <%= f.submit "Save", :class => "btn btn-primary" %>
+            </div>
+          <% end %>
+        </div>
       </div>
-
-      <div class="form-group">
-        <%= f.email_field :email, :class => "form-control", :placeholder => "Email" %>
-      </div>
-
-      <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-        <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
-      <% end %>
-
-      <div class="form-group">
-        <%= f.password_field :password, autocomplete: "off", :class => "form-control", :placeholder => "New Password (leave blank if you don't want to change it)" %>
-      </div>
-
-      <div class="form-group">
-        <%= f.password_field :password_confirmation, autocomplete: "off", :class => "form-control", :placeholder => "Confirm Password" %>
-      </div>
-
-      <div class="form-group">
-        <%= f.password_field :current_password, autocomplete: "off", :placeholder => "Type current password to confirm your change", :class => "form-control" %>
-      </div>
-
-      <div class="actions">
-        <%= f.submit "Update", :class => "btn btn-primary" %>
-      </div>
-    <% end %>
-
-    <h3>Cancel my account</h3>
-
-    <p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
-
-    <%= link_to "Back", :back %>
-
+    </div>
   </div>
 </div>
