--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -30,6 +30,12 @@
                   <li><%= link_to "Log Out", destroy_user_session_path, method: :delete %></li>
                 </ul>
               </li>
+              <li>
+                <a href="#"><i class="fa fa-envelope-o"></i>Messages</a>
+              </li>
+              <li>
+                <a href="#"><i class="fa fa-home fa-lg"></i>Becomes a Host</a>
+              </li>
             <% end %>
           </ul>
         </div><!--/.nav-collapse -->
