--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -210,3 +210,11 @@ input[type="checkbox"]:checked:before {
   width: 100%;
 }
 
+.amentities li {
+  margin-bottom: 10px;
+  list-style-type: none;
+}
+
+.text-line-through {
+  text-decoration: line-through;
+}
