--- a/app/views/rooms/show.html.erb
+++ b/app/views/rooms/show.html.erb
@@ -114,16 +114,15 @@
         </div>
       </div>
     </div>
-
+    <hr/>
     <div class="row">
       <div class="col-md-12">
         <div id="map">
-
         </div>
         <style type="text/css">
           #map {
-            width: 500px;
-            height: 400px;
+            width: 100%;
+            height: 450px;
           }
         </style>
         <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js"></script>
@@ -147,6 +146,23 @@
           google.maps.event.addDomListener(window, 'load', initalize);
         </script>
       </div>
+    </div>
+
+    <h3>Near by</h3>
+    <div class="row">
+      <% for room in @room.nearbys(10) %>
+        <div class="col-md-4">
+          <div class="panel panel-default">
+            <div class="panel panel-heading preview">
+              <%= image_tag room.photos[0].image.url(:medium) %>
+            </div>
+            <div class="panel-body">
+              <%= link_to room.listing_name, room %> <br/>
+              (<%= room.distance.round(2) %> miles away)
+            </div>
+          </div>
+        </div>
+      <% end %>
     </div>
   </div>
 </div>
