--- a/app/views/rooms/show.html.erb
+++ b/app/views/rooms/show.html.erb
@@ -48,8 +48,9 @@
             </div>
           </div>
       </div>
-      <div class="col-md-4">
 
+      <div class="col-md-4">
+        <%= render 'reservations/form' %>
       </div>
     </div>
 
