--- a/app/views/reservations/_form.html.erb
+++ b/app/views/reservations/_form.html.erb
@@ -8,3 +8,14 @@
   <br/>
   <%= f.submit "Book Now", class: "btn btn-primary s"%>
 <% end %>
+
+<script type="text/javascript">
+  $(function(){
+    $("#reservation_start_date").datepicker({
+      dateFormat: 'dd-mm-yy'
+    });
+     $("#reservation_end_date").datepicker({
+      dateFormat: 'dd-mm-yy'
+    });
+  });
+</script>
