#15 refactor room show view

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -218,3 +218,9 @@ input[type="checkbox"]:checked:before {
 .text-line-through {
   text-decoration: line-through;
 }
+
+.reservation-table {
+  width: 100%;
+  border: 1px solid #dce0e0;
+  padding: 10px;
+}
