--- a/app/views/reservations/_form.html.erb
+++ b/app/views/reservations/_form.html.erb
@@ -2,11 +2,11 @@
   <div class="row">
     <div class="col-md-6">
       <label>Check In</label>
-      <%= f.text_field :start_date, readonly: 'true', placeholder: "Start Date" %>
+      <%= f.text_field :start_date, readonly: 'true', placeholder: "Start Date", class: "form-control" %>
     </div>
     <div class="col-md-6">
       <label>Check Out</label>
-      <%= f.text_field :end_date, readonly: 'true', placeholder: "End Date", disabled: "true" %>
+      <%= f.text_field :end_date, readonly: 'true', placeholder: "End Date", class: "form-control", disabled: 'true' %>
     </div>
   </div>
 
@@ -34,12 +34,43 @@
 <% end %>
 
 <script type="text/javascript">
+  var unvailableDates = [];
+  function unavailable(date){
+    var dmy = date.getDate() + "-" + (date.getMonth() + 1) + "-" + date.getFullYear();
+    return [$.inArray(dmy, unvailableDates) == -1];
+  }
   $(function(){
-    $("#reservation_start_date").datepicker({
-      dateFormat: 'dd-mm-yy'
-    });
-     $("#reservation_end_date").datepicker({
-      dateFormat: 'dd-mm-yy'
+    $.ajax({
+      url: '/preload',
+      data: {'room_id': <%= @room.id %>},
+      dataType: 'json',
+      success: function(data){
+        $.each(data, function(arrId, arrValue) {
+          for(var d = new Date(arrValue.start_date); d <= new Date(arrValue.end_date); d.setDate(d.getDate() + 1)){
+            unvailableDates.push($.datepicker.formatDate('d-m-yy', d));
+          }
+        });
+        $("#reservation_start_date").datepicker({
+          dateFormat: 'dd-mm-yy',
+          minDate: 0,
+          maxDate: '3m',
+          beforeShowDay: unavailable,
+          onSelect: function(selected){
+            $("#reservation_end_date").datepicker("option", "minDate", selected);
+            $("#reservation_end_date").attr("disabled", false);
+          }
+        });
+         $("#reservation_end_date").datepicker({
+          dateFormat: 'dd-mm-yy',
+          minDate: 0,
+          maxDate: '3m',
+          beforeShowDay: unavailable,
+          onSelect: function(selected){
+            $("#reservation_start_date").datepicker("option", "maxDate", selected);
+            $("#reservation_start_date").attr("disabled", false);
+          }
+        });
+      }
     });
   });
 </script>
