#17 your reservations, update user info page

--- a/app/views/reservations/your_trips.html.erb
+++ b/app/views/reservations/your_trips.html.erb
@@ -5,7 +5,7 @@
         <%= link_to  "Your Listing", rooms_path, class: "sidebar-link" %>
       </li>
       <li class="sidebar-item">
-        <%= link_to  "Your Reservations", rooms_path, class: "sidebar-link" %>
+        <%= link_to  "Your Reservations", your_reservations_path, class: "sidebar-link" %>
       </li>
       <li class="sidebar-item">
         <%= link_to  "Your Trips", your_trips_path, class: "sidebar-link active" %>
@@ -33,10 +33,11 @@
                 <%= image_tag avatar_url(trip.room.user), class: "img-circle avatar-medium" %>
               <% end %>
             </div>
-            <div class="col-md-2">
-            <%= trip.total %>
+            <div class="col-md-2 right">
+              <%= trip.total %>
             </div>
           </div>
+          <hr/>
         <% end %>
       </div>
     </div>
