--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -22,9 +22,18 @@
                   <%= current_user.fullname %><span class="caret"></span>
                 </a>
                 <ul class="dropdown-menu">
-                  <li><a href="#">Your Trips</a></li>
-                  <li><a href="#">Wish Lists</a></li>
-                  <li><%= link_to "Edit Profile", edit_user_registration_path %></li>
+                  <li>
+                    <%= link_to "Your Listings", rooms_path %>
+                  </li>
+                  <li>
+                    <%= link_to "Your Reservations", your_reservations_path %>
+                  </li>
+                  <li>
+                    <%= link_to "Your Trips", your_trips_path %>
+                  </li>
+                  <li>
+                    <%= link_to "Edit Profile", edit_user_registration_path %>
+                  </li>
                   <li role="separator" class="divider"></li>
                   <li><a href="#">Account Settings</a></li>
                   <li><%= link_to "Log Out", destroy_user_session_path, method: :delete %></li>
