--- a/app/views/rooms/index.html.erb
+++ b/app/views/rooms/index.html.erb
@@ -19,7 +19,7 @@
         <% @rooms.each do |room|%>
           <div class="row">
             <div class="col-md-2">
-              <%= image_tag room.photos.first.image.url(:thumb) unless room.photos.empty? %>
+              <%= image_tag room.show_image_first(:thumb), class: "thumb" %>
             </div>
             <div class="col-md-7">
               <h4><%= room.listing_name %></h4>
