--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -208,6 +208,7 @@ input[type="checkbox"]:checked:before {
 
 .panel-heading.preview img {
   width: 100%;
+  height: 168px;
 }
 
 .amentities li {
@@ -235,4 +236,9 @@ input[type="checkbox"]:checked:before {
   color:#fff;
   padding: 10px;
   margin-bottom: 10px;
+}
+
+.thumb {
+  width: 100px;
+  height: 75px;
 }
