--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -24,7 +24,7 @@
         <div class="col-md-4">
           <div class="panel panel-default">
             <div class="panel-heading preview">
-              <%= image_tag room.photos.first.image.url(:medium) unless room.photos.empty? %>
+              <%= image_tag room.show_image_first(:medium) %>
             </div>
             <div class="panel-body">
               <%= link_to room.listing_name, room_path(room) %>
