--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -251,3 +251,8 @@ input[type="checkbox"]:checked:before {
 .conversation:hover, .conversation:focus {
   background-color: #f4f4f5;
 }
+
+.row-space-2 {
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
