#35 add review stars

--- a/app/views/reviews/_form.html.erb
+++ b/app/views/reviews/_form.html.erb
@@ -1,5 +1,6 @@
 <%= form_for([@room, @room.reviews.new]) do |f| %>
-  <%= f.text_field :star %>
+  <div id="user-stars">
+  </div>
   <%= f.text_field :comment %>
   <%= f.hidden_field :room_id, value: @room.id %>
 
@@ -7,3 +8,11 @@
     <%= f.submit %>
   </div>
 <% end %>
+
+<script>
+  $("#user-stars").raty({
+    path: "/assets",
+    scoreName: "review[star]",
+    score: 1
+  })
+</script>
