--- a/app/views/rooms/show.html.erb
+++ b/app/views/rooms/show.html.erb
@@ -120,7 +120,7 @@
 
     <div class="row">
       <div class="col-md-12">
-        <h3>Reviews <%= @room.average_rating %> (<%= @reviews.count %>)</h3>
+        <h3>Reviews <span id="average_rating"></span> (<%= @reviews.count %>)</h3>
         <div class="container">
           <div>
             <%= render "reviews/form" if @booked && !@has_review %>
@@ -183,3 +183,11 @@
     </div>
   </div>
 </div>
+
+<script type="text/javascript">
+  $("#average_rating").raty({
+    path: "/assets",
+    readOnly: true,
+    score: <%= @room.average_rating %>
+  });
+</script>
