--- a/app/views/reviews/_form.html.erb
+++ b/app/views/reviews/_form.html.erb
@@ -14,7 +14,7 @@
 
 <script>
   $("#user-stars").raty({
-    path: "/assets",
+    path: "/system/images/",
     scoreName: "review[star]",
     score: 1
   })
