--- a/app/views/reviews/_list.html.erb
+++ b/app/views/reviews/_list.html.erb
@@ -30,7 +30,7 @@
     </div>
     <script type="text/javascript">
       $("#star_<%= review.id %>").raty({
-        path: "/assets",
+        path: "/system/images/",
         readOnly: true,
         score: <%= review.star %>
       });
