--- a/app/views/rooms/show.html.erb
+++ b/app/views/rooms/show.html.erb
@@ -186,7 +186,7 @@
 
 <script type="text/javascript">
   $("#average_rating").raty({
-    path: "/assets",
+    path: "/system/images",
     readOnly: true,
     score: <%= @room.average_rating %>
   });
