--- a/app/views/reservations/your_reservations.html.erb
+++ b/app/views/reservations/your_reservations.html.erb
@@ -20,25 +20,27 @@
       <div class="panel panel-body">
         <% @rooms.each do |room| %>
           <% room.reservations.each do |reservation| %>
-            <div class="row">
-              <div class="col-md-2">
-                <%= reservation.start_date.strftime('%v') %>
+            <% if reservation.status %>
+              <div class="row">
+                <div class="col-md-2">
+                  <%= reservation.start_date.strftime('%v') %>
+                </div>
+                <div class="col-md-6">
+                  <%= link_to room_path(reservation.room) do %>
+                    <%= image_tag reservation.room.show_image_first(:thumb), class: "thumb" %>
+                  <% end %>
+                </div>
+                <div class="col-md-2">
+                  <%= link_to user_path(reservation.user) do %>
+                    <%= image_tag avatar_url(reservation.user), class: "img-circle avatar-medium" %>
+                  <% end %>
+                </div>
+                <div class="col-md-2 right">
+                  <%= reservation.total %>
+                </div>
               </div>
-              <div class="col-md-6">
-                <%= link_to room_path(reservation.room) do %>
-                  <%= image_tag reservation.room.show_image_first(:thumb), class: "thumb" %>
-                <% end %>
-              </div>
-              <div class="col-md-2">
-                <%= link_to user_path(reservation.user) do %>
-                  <%= image_tag avatar_url(reservation.user), class: "img-circle avatar-medium" %>
-                <% end %>
-              </div>
-              <div class="col-md-2 right">
-                <%= reservation.total %>
-              </div>
-            </div>
-            <hr/>
+              <hr/>
+            <% end %>
           <% end %>
         <% end %>
       </div>
