--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -256,3 +256,26 @@ input[type="checkbox"]:checked:before {
   margin-top: 10px;
   margin-bottom: 10px;
 }
+
+#wrapper {
+  width: 960px;
+  margin: 0 auto;
+}
+
+#sidebar {
+  float: right;
+  width: 340px;
+}
+
+#sidebar #widget {
+  width: 340px;
+  height: 600px;
+  margin-bottom: 10px;
+  border-bottom: 1px solid #ccc;
+}
+
+#article {
+  width: 560px;
+}
+
+
