--- a/app/views/rooms/show.html.erb
+++ b/app/views/rooms/show.html.erb
@@ -186,7 +186,10 @@
 
 <script type="text/javascript">
   $("#average_rating").raty({
-    path: "/system/images",
+    starOff : '<%= image_path("star-off.png") %>',
+    starOn  : '<%= image_path("star-on.png") %>',
+    starHalf  : '<%= image_path("star-half.png") %>',
+    path: "",
     readOnly: true,
     score: <%= @room.average_rating %>
   });
