--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -24,7 +24,7 @@
 
 <div class="row">
   <div class="col-md-4 col-sm-12">
-    <a href="http://localhost:3000/search?utf8=%E2%9C%93&search=ho+chi+minh">
+    <a href="http://vast-citadel-3231.heroku.com/search?utf8=%E2%9C%93&search=ho+chi+minh">
       <div class="discovery-card" id="ho-chi-minh">
         <div class="va-container">
           <div class="va-middle text-center">
@@ -35,7 +35,7 @@
     </a>
   </div>
   <div class="col-md-4 col-sm-6">
-    <a href="http://localhost:3000/search?utf8=%E2%9C%93&search=da+nang">
+    <a href="http://vast-citadel-3231.heroku.com/search?utf8=%E2%9C%93&search=da+nang">
       <div class="discovery-card" id="da-nang">
         <div class="va-container">
           <div class="va-middle text-center">
@@ -46,7 +46,7 @@
     </a>
   </div>
   <div class="col-md-4 col-sm-6">
-    <a href="http://localhost:3000/search?utf8=%E2%9C%93&search=ha+noi">
+    <a href="http://vast-citadel-3231.heroku.com/search?utf8=%E2%9C%93&search=ha+noi">
       <div class="discovery-card" id="ha-noi">
         <div class="va-container">
           <div class="va-middle text-center">
