--- a/app/views/pages/search.html.erb
+++ b/app/views/pages/search.html.erb
@@ -107,7 +107,7 @@
 
           <hr/>
 
-          <div class="row">
+          <div class="row text-center">
             <%= f.submit "Search", class: "btn btn-primary" %>
           </div>
         <% end %>
