--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -8,7 +8,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">AirAlien</a>
+          <a class="navbar-brand" href="/">AirAlien</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <%= form_tag search_path, class: "navbar-form navbar-left", method: :get do %>
@@ -44,12 +44,12 @@
               </li>
               <li>
                 <%= link_to conversations_path do %>
-                  <i class="fa fa-envelope-o"></i>Messages
+                  <i class="fa fa-envelope-o"></i> Messages
                 <% end %>
               </li>
               <li>
                 <%= link_to new_room_path do %>
-                  <i class="fa fa-home fa-lg"></i>Becomes a Host
+                  <i class="fa fa-home fa-lg"></i> Becomes a Host
                 <% end %>
               </li>
             <% end %>
