--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -10,7 +10,7 @@
       <%= text_field_tag :end_date, params[:end_date], placeholder: "End Date", class: "form-control" %>
     </div>
     <div class="col-md-2">
-      <%= submit_tag "Search", class: "btn btn-primary" %>
+      <%= submit_tag "Search", class: "btn btn-primary", style: "width:100%" %>
     </div>
   </div>
 <% end %>
