--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -72,7 +72,7 @@
     <div class="col-md-4">
       <div class="panel panel-default">
         <div class="panel-heading preview">
-          <% image_tag room.photos.first.image.url(:medium) unless room.photos.empty? %>
+          <%= image_tag room.photos.first.image.url(:medium) unless room.photos.empty? %>
         </div>
         <div class="panel-body">
           <%= image_tag avatar_url(room.user), class: "img-circle avatar-small" %>&nbsp;
