--- a/app/views/rooms/show.html.erb
+++ b/app/views/rooms/show.html.erb
@@ -63,7 +63,7 @@
 
     <div class="row">
       <div class="col-md-2">
-        <p>Amentities</p>
+        <h2>Amentities</h2>
       </div>
       <div class="col-md-10">
         <div class="row">
