--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -31,4 +31,5 @@
     </div>
   </div>
 </div>
-<%= subscribe_to conversation_messages_path(@conversation) %>
+<!--<%= subscribe_to conversation_messages_path(@conversation) %>
+<% publish_to conversation_messages_path(@conversation)  %> -->
