--- a/app/views/shared/_message.html.erb
+++ b/app/views/shared/_message.html.erb
@@ -1,4 +1,5 @@
 <% unless flash.empty? %>
+  <% byebug %>
   <script type="text/javascript">
     <% flash.each do |f| %>
       <% type = f[0].to_s.gsub('alert', 'error').gsub('notice', 'info') %>
